--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome! 🚀</h1>
+        <h1>BENVENUTTI 🚀</h1>
         <p class="subtitle">I GOT THE POWER</p>
 
         <div class="features">
