--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>BIENVENIDOS AMI PAGINA new 🚀</h1>
+        <h1>BIENVENIDOS AMI PAGINA new bracnh dev 🚀</h1>
         <p class="subtitle">I GOT THE POWER</p>
 
         <div class="features">
             <div class="feature">
-                <h3>📋 Organize</h3>
-                <p>Structure your code and documentation effectively</p>
+                <h3>📋 CREER PARA CREAR</h3>
+                <p>TU ERES EL CREADOR DE TU DESTINO</p>
             </div>
             <div class="feature">
                 <h3>🔄 Collaborate</h3>
