--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                 <p>Work together with your team seamlessly</p>
             </div>
             <div class="feature">
-                <h3>⚙️ Deploy</h3>
-                <p>Automate your DevOps workflows</p>
+                <h3>⚙️ despliega</h3>
+                <p>automatiza el despliegue</p>
             </div>
             <div class="feature">
                 <h3>📊 Monitor</h3>
