--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
             <div class="feature">
                 <h3>⚙️ despliega</h3>
-                <p>automatiza el despliegue</p>
+                <p>AUTOMATIZA EL DESPLIEGUE AWS GC OCI</p>
             </div>
             <div class="feature">
                 <h3>📊 Monitor</h3>
